@@ -1,3 +1,11 @@
+2007-05-07  Abel Cheung  <abelcheung@gmail.com>
+
+	* showcode.php:
+	New file for showing fragment code in popup window.
+
+	* wp-scorerender.php:
+	Add hook for showing stat in WP dashboard.
+
 2007-05-06  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
